After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731178 - evdev: Used floating point instead of fixed point numbers
evdev: Used floating point instead of fixed point numbers
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
: 731445 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-06-03 21:33 UTC by Jonas Ådahl
Modified: 2014-06-10 09:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
evdev: Used floating point instead of fixed point numbers (5.92 KB, patch)
2014-06-03 21:33 UTC, Jonas Ådahl
reviewed Details | Review
evdev: Used floating point instead of fixed point numbers (6.49 KB, patch)
2014-06-05 07:55 UTC, Jonas Ådahl
committed Details | Review

Description Jonas Ådahl 2014-06-03 21:33:04 UTC
Upstream is undergoing a backward-incompatible API change, deprecating
li_fixed_t usage (identical to wl_fixed_t) changeng to using doubles.
This patch updates the clutter implementation to newer API. There is no
release available yet with this change, and it is not yet pushed upstream,
but has been sent to wayland-devel@lists.freedesktop.org.
Comment 1 Jonas Ådahl 2014-06-03 21:33:06 UTC
Created attachment 277833 [details] [review]
evdev: Used floating point instead of fixed point numbers

Following the API change in libinput, change the uses of fixed point
numbers to floating point numbers.
Comment 2 Emmanuele Bassi (:ebassi) 2014-06-03 23:21:49 UTC
Review of attachment 277833 [details] [review]:

looks good, and finally sanity prevailed. :-)

do we have a version number we can depend on in the pkg-config check? I'd be more comfortable landing this when we can fail configuration/compilation unless we have the correct API.
Comment 3 Jonas Ådahl 2014-06-04 20:36:40 UTC
(In reply to comment #2)
> Review of attachment 277833 [details] [review]:
> 
> looks good, and finally sanity prevailed. :-)
> 
> do we have a version number we can depend on in the pkg-config check? I'd be
> more comfortable landing this when we can fail configuration/compilation unless
> we have the correct API.

No, but I can bump the version to 0.2.99 or something after pushing and update this to require that version. Then we just need to synchronize so that there is a libinput version available before releasing a clutter version with this patch.

There is another API break ingoing (renaming an enum), which would make sense to push in one go together with this. I'll create another patch for that change.

How does that sound?
Comment 4 Emmanuele Bassi (:ebassi) 2014-06-04 23:04:29 UTC
sounds good to me.
Comment 5 Jonas Ådahl 2014-06-05 07:55:39 UTC
Created attachment 277933 [details] [review]
evdev: Used floating point instead of fixed point numbers

Following the API change in libinput, change the uses of fixed point
numbers to floating point numbers.
Comment 6 Emmanuele Bassi (:ebassi) 2014-06-10 09:37:48 UTC
*** Bug 731445 has been marked as a duplicate of this bug. ***
Comment 7 Emmanuele Bassi (:ebassi) 2014-06-10 09:38:22 UTC
Review of attachment 277933 [details] [review]:

looks good.
Comment 8 Emmanuele Bassi (:ebassi) 2014-06-10 09:41:11 UTC
Attachment 277933 [details] pushed as 61929e2 - evdev: Used floating point instead of fixed point numbers